-Update to 1.17-pre5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs  = -Xmx1G
 
 #Fabric properties
-minecraft_version   = 1.16.5
-yarn_mappings       = 1.16.5+build.5
-loader_version      = 0.11.2
+minecraft_version = 1.17-pre5
+yarn_mappings = 1.17-pre5+build.2
+loader_version = 0.11.3
 
 #Mod properties
-mod_version         = 1.0.0
+mod_version         = 1.2.3
 maven_group         = com.jamalam360
 archives_base_name  = rightclickharvest
 
 #Dependencies
-fabric_api_version  = 0.31.0+1.16
+fabric_api_version  = 0.34.8+1.17
