--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-org.gradle.jvmargs  = -Xmx1G
+org.gradle.jvmargs  = -Xmx4G
 
 #Fabric properties
-minecraft_version = 1.17-pre5
-yarn_mappings = 1.17-pre5+build.2
-loader_version = 0.11.3
+minecraft_version=1.17
+yarn_mappings=1.17+build.13
+loader_version=0.11.6
 
 #Mod properties
 mod_version         = 1.3.0
@@ -11,4 +11,4 @@ maven_group         = com.jamalam360
 archives_base_name  = rightclickharvest
 
 #Dependencies
-fabric_api_version  = 0.34.8+1.17
+fabric_api_version=0.36.0+1.17
