--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ loader_version=0.12.4
 
 #Mod properties
 mod_version         = 1.5.0
-maven_group         = com.jamalam360
+maven_group         = io.github.jamalam360
 archives_base_name  = rightclickharvest
