--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-org.gradle.jvmargs  = -Xmx4G
-
+org.gradle.jvmargs=-Xmx4G
 #Fabric properties
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.61
 loader_version=0.12.4
-
 #Mod properties
-mod_version         = 1.5.0
-maven_group         = io.github.jamalam360
-archives_base_name  = rightclickharvest
+mod_version=1.5.0
+maven_group=io.github.jamalam360
+archives_base_name=rightclickharvest
+#Other Dependencies
+mod_menu_version=2.0.14
