--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
-    id "fabric-loom" version "0.9-SNAPSHOT"
-    id "org.cadixdev.licenser" version "0.6.1"
+    id 'fabric-loom' version '0.10-SNAPSHOT'
+    id 'io.github.juuxel.loom-quiltflower-mini' version '1.1.0'
+    id 'maven-publish'
+    id 'org.cadixdev.licenser' version '0.6.1'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
