--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,18 @@
+# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
-#Fabric properties
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
-#Mod properties
-mod_version=1.5.1
-maven_group=io.github.jamalam360
-archives_base_name=rightclickharvest
-#Other Dependencies
-mod_menu_version=2.0.14
+
+# Fabric properties
+    # check these on https://fabricmc.net/versions.html
+    minecraft_version=1.18.1
+    yarn_mappings=1.18.1+build.1
+    loader_version=0.12.10
+
+# Mod Properties
+    mod_version=1.5.2
+    maven_group=io.github.jamalam360
+    archives_base_name=rightclickharvest
+
+# Dependencies
+    modmenu_version=3.0.0
+    fabric_version=0.43.1+1.18
+    use_third_party_mods=true
