--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 #Fabric properties
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
+minecraft_version=1.18.2
+quilt_mappings=22
+loader_version=0.13.3
 #Mod properties
 mod_version=1.5.1
-maven_group=io.github.jamalam360
+maven_group=io.github.jamalam360.rightclickharvest
 archives_base_name=rightclickharvest
-#Other Dependencies
-mod_menu_version=2.0.14
+
