--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 build/
 out/
 classes/
+local.properties
 
 #IDEA
 .idea/
@@ -19,7 +20,3 @@ bin/
 
 #fabric
 run/
-
-#update action
-version_manifest_v2.json
-.cache/
