--- a/versions.toml
+++ b/versions.toml
@@ -2,8 +2,10 @@
 minecraft = "1.18.2"
 loader = "0.13.3"
 fabric-api = "0.51.0+1.18.2"
+mod-menu = "3.1.0"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft"  }
 loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
+mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
