--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
 org.gradle.jvmargs=-Xmx4G
 
-mod_version=2.0.0
+mod_version=2.0.1
+release_name=V2.0.1 [1.16.x - 1.18.x]
 archive_base_name=rightclickharvest
 
 supported_versions=1.18.2,1.18.1,1.18,1.17.1,1.17,1.16.5,1.16.4,1.16.3,1.16.2,1.16.1,1.16
 
 curseforge_project_id=452834
 
+github_user=JamCoreModding
 github_repo=RightClickHarvestFabric
+
+publish_to_maven=false
