--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,6 @@ curseforge_project_id=452834
 
 github_user=JamCoreModding
 github_repo=RightClickHarvestFabric
+release_branch=1.16-1.18
 
 publish_to_maven=false
