--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx4G
 
 mod_version=2.0.4
-release_name=V2.0.4 [1.16.x - 1.18.x]
+release_name=V2.0.4 [1.18.2]
 archive_base_name=rightclickharvest
-supported_versions=1.18.2,1.18.1,1.18,1.17.1,1.17,1.16.5,1.16.4,1.16.3,1.16.2,1.16.1,1.16
+supported_versions=1.18.2
 
 curseforge_project_id=452834
-curseforge_required_dependenciese=
+curseforge_required_dependenciese=jamlib
 
 github_user=JamCoreModding
 github_repo=RightClickHarvestFabric
