--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx4G
 
 mod_version=2.0.5
-release_name=V2.0.5 [1.18.2]
+release_name=V2.0.5 [1.18.2 - 1.19]
 archive_base_name=rightclickharvest
-supported_versions=1.18.2
+supported_versions=1.18.2,1.19-Snapshot
 
 curseforge_project_id=452834
-curseforge_required_dependenciese=jamlib
+curseforge_required_dependencies=jamlib
 
 github_user=JamCoreModding
 github_repo=RightClickHarvestFabric
