feat(build): 1.19 support

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs=-Xmx4G
 
 mod_version=2.0.5
-release_name=V2.0.5 [1.18.2 - 1.19]
+release_name=V2.0.5 [1.18.x - 1.19]
 archive_base_name=rightclickharvest
-supported_versions=1.18.2,1.19-Snapshot
+supported_versions=1.18-Snapshot,1.18,1.18.1,1.18.2,1.19-Snapshot
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib
