chore(build): update release branch

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,6 @@ curseforge_required_dependencies=jamlib
 
 github_user=JamCoreModding
 github_repo=RightClickHarvestFabric
-release_branch=1.18
+release_branch=1.18-1.19
 
 publish_to_maven=false
