--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ archive_base_name=rightclickharvest
 supported_versions=1.18-Snapshot,1.18,1.18.1,1.18.2,1.19-Snapshot
 
 curseforge_project_id=452834
-curseforge_required_dependencies=jamlib
+curseforge_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=RightClickHarvest
