--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 org.gradle.jvmargs=-Xmx4G
+org.gradle.parallel=true
 
-mod_version=2.0.8
-release_name=V2.0.8 [1.18.x - 1.19]
+mod_version=2.1.0
+release_name=V2.1.0 [1.18.x - 1.19]
 archive_base_name=rightclickharvest
 supported_versions=1.18-Snapshot,1.18,1.18.1,1.18.2,1.19-Snapshot,1.19
 
