--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 mod_version=2.2.0
-release_name=V2.2.0 [1.18.x - 1.19]
+release_name=V2.2.0 [1.19]
 archive_base_name=rightclickharvest
-supported_versions=1.18-Snapshot,1.18,1.18.1,1.18.2,1.19-Snapshot,1.19
+supported_versions=1.19-Snapshot,1.19
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
