--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 mod_version=2.2.1
-release_name=V2.2.1 [1.19]
+release_name=V2.2.1 [1.18.x]
 archive_base_name=rightclickharvest
-supported_versions=1.19
+supported_versions=1.18,1.18.1,1.18.2
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
@@ -14,6 +14,6 @@ modrinth_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=RightClickHarvest
-release_branch=1.19
+release_branch=1.18.2
 
 publish_to_maven=false
