--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=2.2.1
+mod_version=2.2.1+1.18
 release_name=V2.2.1 [1.18.x]
 archive_base_name=rightclickharvest
 supported_versions=1.18,1.18.1,1.18.2
