--- a/versions.toml
+++ b/versions.toml
@@ -5,12 +5,12 @@ mappings-build = "1"
 fabric-api = "0.56.3+1.19"
 mod-menu = "4.0.0"
 lazy-dfu = "0.1.3"
-jam-lib = "0.4.2"
+jamlib = "0.4.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
-required-jam-lib = { module = "io.github.jamalam360:jam-lib", version.ref = "jam-lib" }
+required-jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
 optional-mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
 runtime-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
