--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=2.2.3
-release_name=V2.2.3 [1.19]
+mod_version=2.3.0
+release_name=V2.3.0 [1.19.x]
 archive_base_name=rightclickharvest
-supported_versions=1.19
+supported_versions=1.19,1.19.1,1.19.2
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
