--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,6 @@ modrinth_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=RightClickHarvest
-release_branch=1.18.2
+release_branch=1.18.x
 
 publish_to_maven=false
