--- a/versions.toml
+++ b/versions.toml
@@ -1,16 +1,20 @@
 [versions]
 minecraft = "1.19.2"
 loader = "0.14.9"
-mappings-build = "1"
-fabric-api = "0.59.0+1.19.2"
+quilt_mappings = "1.19.2+build.21"
+fabric-api = "0.64.0+1.19.2"
 mod-menu = "4.0.6"
 lazy-dfu = "0.1.3"
-jamlib = "0.4.2"
+jamlib = "0.4.4"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
+quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_mappings" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
+
 required-jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
+
 optional-mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
+
 runtime-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
