--- a/versions.toml
+++ b/versions.toml
@@ -1,20 +1,36 @@
 [versions]
 minecraft = "1.19.2"
-loader = "0.14.9"
-quilt_mappings = "1.19.2+build.21"
+loader = "0.14.10"
+quilt-mappings = "1.19.2+build.21"
 fabric-api = "0.64.0+1.19.2"
 mod-menu = "4.0.6"
+rpg-stats = "4.4.1"
+cardinal-components = "4.1.4"
+auto-config = "1.18-SNAPSHOT"
+lib-gui = "6.0.0+1.19"
 lazy-dfu = "0.1.3"
 jamlib = "0.4.4"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_mappings" }
+quilt-mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt-mappings" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 
-required-jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
+jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
 
-optional-mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
+mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
+rpg-stats = { module = "maven.modrinth:rpgstats", version.ref = "rpg-stats" }
+# CCA & Auto Config are dependencies of RPG Stats
+cardinal-components-base = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-base", version.ref = "cardinal-components" }
+cardinal-components-entity = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-entity", version.ref = "cardinal-components" }
+auto-config = { module = "com.github.p03w-rehost:AutoConfig", version.ref = "auto-config" }
+lib-gui = { module = "io.github.cottonmc:LibGui", version.ref = "lib-gui" }
 
-runtime-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
+lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
+
+[bundles]
+fabric = ["fabric-loader", "fabric-api"]
+required = ["jamlib"]
+optional = ["mod-menu", "rpg-stats", "cardinal-components-base", "cardinal-components-entity", "auto-config", "lib-gui"]
+runtime = ["lazy-dfu"]
