--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=3.0.6+1.18
-release_name=V3.0.6 [1.18.x]
+mod_version=3.0.6
+release_name=V3.0.6 [1.19.x]
 archive_base_name=right-click-harvest
-supported_versions=1.18,1.18.1,1.18.2
+supported_versions=1.19,1.19.1,1.19.2
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
@@ -14,6 +14,6 @@ modrinth_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=right-click-harvest
-release_branch=1.18.x
+release_branch=1.19.x
 
 publish_to_maven=true
