--- a/versions.toml
+++ b/versions.toml
@@ -9,7 +9,7 @@ mod-menu = "5.0.0-alpha.4"
 #auto-config = "1.18-SNAPSHOT"
 #lib-gui = "6.0.0+1.19"
 lazy-dfu = "0.1.3"
-jamlib = "0.5.1"
+jamlib = "0.6.0+1.19.3"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
