--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=3.2.0+1.19.x
-release_name=V3.2.0 [1.19.x]
+mod_version=3.2.0+1.19.4-forge
+release_name=V3.2.0 [1.19.4 Forge]
 archive_base_name=right-click-harvest
-supported_versions=1.19,1.19.1,1.19.2,1.19.3,1.19.4
+supported_versions=1.19.4
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
