--- a/versions.toml
+++ b/versions.toml
@@ -1,26 +1,6 @@
 [versions]
-minecraft = "1.19.4"
-loader = "0.14.17"
-quilt-mappings = "1.19.4+build.3"
-fabric-api = "0.76.0+1.19.4"
-mod-menu = "6.1.0-rc.1"
-lazy-dfu = "0.1.3"
-jamlib = "0.6.0+1.19.4"
+minecraft = "1.19.4-45.0.64"
+
 
 [libraries]
-minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-quilt-mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt-mappings" }
-fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
-fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
-
-jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
-
-mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
-
-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
-
-[bundles]
-fabric = ["fabric-loader", "fabric-api"]
-required = ["jamlib"]
-optional = ["mod-menu"]
-runtime = ["lazy-dfu"]
+minecraft = { module = "net.minecraftforge:forge", version.ref = "minecraft" }
