--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,17 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
+org.gradle.daemon=false
 
-mod_version=3.2.0+1.19.3-forge
-release_name=V3.2.0 [1.19.3 Forge]
+mod_version=3.2.0+1.19.2-forge
+release_name=V3.2.0 [1.19.2 Forge]
 archive_base_name=right-click-harvest
-supported_versions=1.19.3
+supported_versions=1.19.2
 
 curseforge_project_id=452834
-curseforge_required_dependencies=jamlib,fabric-api
-
 modrinth_project_id=rightclickharvest
-modrinth_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=right-click-harvest
-release_branch=main
+release_branch=forge-1.19.2
 
 publish_to_maven=true
