fix: rpgstats compat update
closes: #35

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=3.2.0+1.19.x
-release_name=V3.2.0 [1.19.x]
+mod_version=3.2.1+1.19.x-fabric
+release_name=V3.2.1 [1.19.x Fabric]
 archive_base_name=right-click-harvest
 supported_versions=1.19,1.19.1,1.19.2,1.19.3,1.19.4
 
