--- a/versions.toml
+++ b/versions.toml
@@ -1,11 +1,11 @@
 [versions]
-minecraft = "1.19.4"
-loader = "0.14.17"
-quilt-mappings = "1.19.4+build.3"
-fabric-api = "0.76.0+1.19.4"
-mod-menu = "6.1.0-rc.1"
+minecraft = "1.20-rc1"
+loader = "0.14.21"
+quilt-mappings = "1.20-rc1+build.6"
+fabric-api = "0.83.0+1.20"
+mod-menu = "7.0.0-beta.2"
 lazy-dfu = "0.1.3"
-jamlib = "0.6.0+1.19.4"
+jamlib = "0.6.0+1.20"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
