feat: update to forge 1.20

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,16 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=3.2.0+1.19.4-forge
-release_name=V3.2.0 [1.19.4 Forge]
+mod_version=3.2.0+1.20-forge
+release_name=V3.2.0 [1.20 Forge]
 archive_base_name=right-click-harvest
-supported_versions=1.19.4
+supported_versions=1.20
 
 curseforge_project_id=452834
-curseforge_required_dependencies=jamlib,fabric-api
-
 modrinth_project_id=rightclickharvest
-modrinth_required_dependencies=jamlib,fabric-api
 
 github_user=JamCoreModding
 github_repo=right-click-harvest
-release_branch=main
+release_branch=forge-1.20
 
 publish_to_maven=true
