--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-mod_version=3.2.2+1.19.x-1.20-fabric
-release_name=V3.2.2 [1.19.x-1.20 Fabric]
+mod_version=3.2.2+1.19.x-1.20.1-fabric
+release_name=V3.2.2 [1.19.x-1.20.1 Fabric]
 archive_base_name=right-click-harvest
-supported_versions=1.19,1.19.1,1.19.2,1.19.3,1.19.4,1.20,1.20-SNAPSHOT
+supported_versions=1.19,1.19.1,1.19.2,1.19.3,1.19.4,1.20,1.20.1
 
 curseforge_project_id=452834
 curseforge_required_dependencies=jamlib,fabric-api
