--- a/versions.toml
+++ b/versions.toml
@@ -1,7 +1,7 @@
 [versions]
-minecraft = "1.20-rc1"
+minecraft = "1.20.1"
 loader = "0.14.21"
-quilt-mappings = "1.20-rc1+build.6"
+quilt-mappings = "1.20.1+build.1"
 fabric-api = "0.83.0+1.20"
 mod-menu = "7.0.0-beta.2"
 lazy-dfu = "0.1.3"
