--- a/versions.toml
+++ b/versions.toml
@@ -1,10 +1,9 @@
 [versions]
 minecraft = "1.20.1"
-loader = "0.14.21"
-quilt-mappings = "1.20.1+build.1"
-fabric-api = "0.83.0+1.20"
-mod-menu = "7.0.0-beta.2"
-lazy-dfu = "0.1.3"
+loader = "0.14.22"
+quilt-mappings = "1.20.1+build.23"
+fabric-api = "0.86.1+1.20.1"
+mod-menu = "7.2.1"
 jamlib = "0.6.0+1.20"
 
 [libraries]
@@ -12,15 +11,5 @@ minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 quilt-mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt-mappings" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
-
 jamlib = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
-
 mod-menu = { module = "com.terraformersmc:modmenu", version.ref = "mod-menu" }
-
-lazy-dfu = { module = "maven.modrinth:lazydfu", version.ref = "lazy-dfu" }
-
-[bundles]
-fabric = ["fabric-loader", "fabric-api"]
-required = ["jamlib"]
-optional = ["mod-menu"]
-runtime = ["lazy-dfu"]
