--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,11 @@
-org.gradle.jvmargs=-Xmx4G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.parallel=true
 
-mod_version=3.2.3+1.19.2-forge
-release_name=V3.2.3 [1.19.2 Forge]
-archive_base_name=right-click-harvest
-supported_versions=1.19.2
-
-curseforge_project_id=452834
-modrinth_project_id=rightclickharvest
-
-github_user=JamCoreModding
-github_repo=right-click-harvest
-release_branch=forge-1.19.2
-
-publish_to_maven=true
+version=4.0.0
+minecraft_version=1.20.2
+branch=1.20.2-multiloader
+group=io.github.jamalam360
+mod_name=Right Click Harvest
+mod_id=rightclickharvest
+enabled_platforms=fabric,forge,quilt
