--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -43,30 +43,57 @@ dependencies {
 }
 
 if (System.getenv("CURSEFORGE_API_KEY") != null && System.getenv("MODRINTH_API_KEY") != null) {
-// Uncomment these lines and fill in the IDs when ready to publish :)
-//    unifiedPublishing {
-//        project {
-//            displayName = "V${project.version} (Forge ${project.minecraft_version})"
-//            changelog = rootProject.file("CHANGELOG.md").text
-//            releaseType = project.version.contains("beta") ? "beta" : "release"
-//            gameVersions = [project.minecraft_version]
-//            gameLoaders = ["forge"]
-//
-//            mainPublication tasks.jar
-//
-//            curseforge {
-//                token = System.getenv("CURSEFORGE_API_KEY")
-//                id = ""
-//                gameLoaders.add("NeoForge")
-//            }
-//
-//            modrinth {
-//                token = System.getenv("MODRINTH_API_KEY")
-//                id = ""
-//                gameLoaders.add("neoforge")
-//            }
-//        }
-//    }
+    unifiedPublishing {
+        project {
+            displayName = "V${project.version} (Forge ${project.minecraft_version})"
+            changelog = rootProject.file("CHANGELOG.md").text
+            releaseType = project.version.contains("beta") ? "beta" : "release"
+            gameVersions = [project.minecraft_version]
+            gameLoaders = ["forge"]
+
+            mainPublication tasks.jar
+
+            relations {
+                depends {
+                    curseforge = "jamlib"
+                    modrinth = "jamlib"
+                }
+            }
+
+            curseforge {
+                token = System.getenv("CURSEFORGE_API_KEY")
+                id = "452834"
+                gameLoaders.add("NeoForge")
+            }
+
+            modrinth {
+                token = System.getenv("MODRINTH_API_KEY")
+                id = "Cnejf5xM"
+                gameLoaders.add("neoforge")
+            }
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenForge(MavenPublication) {
+            artifactId = rootProject.archivesBaseName + "-forge"
+            from components.java
+        }
+    }
+
+    repositories {
+        if (System.getenv("MAVEN_USERNAME") != null && System.getenv("MAVEN_PASSWORD") != null) {
+            maven {
+                url = "https://maven.jamalam.tech/releases"
+                credentials {
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
+                }
+            }
+        }
+    }
 }
 
 shadowJar {
