proper jamlib version

--- a/build.gradle
+++ b/build.gradle
@@ -80,8 +80,7 @@ allprojects {
     }
     
     tasks.publish {
-        dependsOn("githubRelease")
-        dependsOn("publishAllPublicationsToMavenRepository")
+        dependsOn(":githubRelease")
         dependsOn("fabric:publishUnified")
         dependsOn("quilt:publishUnified")
         dependsOn("forge:publishUnified")
