--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -50,6 +50,16 @@ if (System.getenv("CURSEFORGE_API_KEY") != null && System.getenv("MODRINTH_API_K
 
             relations {
                 depends {
+                    curseforge = "fabric-api"
+                    modrinth = "fabric-api"
+                }
+
+                depends {
+                    curseforge = "architectury-api"
+                    modrinth = "architectury-api"
+                }
+
+                depends {
                     curseforge = "jamlib"
                     modrinth = "jamlib"
                 }
