--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,6 +55,11 @@ if (System.getenv("CURSEFORGE_API_KEY") != null && System.getenv("MODRINTH_API_K
 
             relations {
                 depends {
+                    curseforge = "architectury-api"
+                    modrinth = "architectury-api"
+                }
+
+                depends {
                     curseforge = "jamlib"
                     modrinth = "jamlib"
                 }
