--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ if (System.getenv("GITHUB_TOKEN") != null) {
         token(System.getenv("GITHUB_TOKEN"))
         owner("JamCoreModding")
         repo("right-click-harvest")
-        tagName(project.version)
+        tagName("${project.version}+${minecraft_version}")
         releaseName("V${project.version} [${minecraft_version}]")
         body(project.rootProject.file("CHANGELOG.md").text)
         draft(false)
@@ -88,5 +88,6 @@ allprojects {
         dependsOn("fabric:publishUnified")
         dependsOn("quilt:publishUnified")
         dependsOn("forge:publishUnified")
+        dependsOn("neoforge:publishUnified")
     }
 }
