--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
 
-version=4.0.1
+version=4.0.2
 minecraft_version=1.20.2
 branch=1.20.2-multiloader
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
-enabled_platforms=fabric,forge,quilt
+enabled_platforms=fabric,forge,neoforge,quilt
