--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,9 +1,12 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "10.0.8"
+architectury = "10.0.17"
 
 # https://files.minecraftforge.net/net/minecraftforge/forge/
 forge = "1.20.2-48.0.33"
+
+# https://neoforged.net/
+neoforge = "20.2.86"
 
 # https://fabricmc.net/develop
 fabric-loader = "0.14.24"
@@ -14,7 +17,7 @@ quilt-loader = "0.21.1"
 quilted-fabric-api = "7.4.0+0.90.0-1.20.1"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.0.0"
+jamlib = "1.0.3+1.20.2"
 
 # https://modrinth.com/mod/modmenu/versions
 modmenu = "8.0.0"
@@ -23,8 +26,11 @@ modmenu = "8.0.0"
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
 architectury-fabric = { module = "dev.architectury:architectury-fabric", version.ref = "architectury" }
 architectury-forge = { module = "dev.architectury:architectury-forge", version.ref = "architectury" }
+architectury-neoforge = { module = "dev.architectury:architectury-neoforge", version.ref = "architectury" }
 
 forge = { module = "net.minecraftforge:forge", version.ref = "forge" }
+
+neoforge = { module = "net.neoforged:neoforge", version.ref = "neoforge" }
 
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
@@ -36,5 +42,6 @@ jamlib-common = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib"
 jamlib-fabric = { module = "io.github.jamalam360:jamlib-fabric", version.ref = "jamlib" }
 jamlib-quilt = { module = "io.github.jamalam360:jamlib-quilt", version.ref = "jamlib" }
 jamlib-forge = { module = "io.github.jamalam360:jamlib-forge", version.ref = "jamlib" }
+jamlib-neoforge = { module = "io.github.jamalam360:jamlib-neoforge", version.ref = "jamlib" }
 
 modmenu = { module = "maven.modrinth:modmenu", version.ref = "modmenu" }
