--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.0.2
+version=4.1.0+1.20.2
 minecraft_version=1.20.2
-branch=1.20.2-multiloader
+branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
