--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -16,22 +16,29 @@ Right click crops to harvest them - with style.
 
 [[dependencies.rightclickharvest]]
 modId = "neoforge"
-mandatory = true
-versionRange = "[20.2,)"
+type = "required"
+versionRange = "[20.4,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.rightclickharvest]]
 modId = "minecraft"
-mandatory = true
-versionRange = "[1.20.2,)"
+type = "required"
+versionRange = "[1.20.4,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.rightclickharvest]]
 modId = "architectury"
-mandatory = true
-versionRange = "[10.0.17,)"
+type = "required"
+versionRange = "[11.0.9,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.rightclickharvest]]
+modId = "jamlib"
+type = "required"
+versionRange = "[1.0.3+1.20.4,)"
 ordering = "AFTER"
 side = "BOTH"
 
