--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -107,10 +107,16 @@ publishing {
 
 processResources {
     filesMatching("quilt.mod.json") {
-        expand "version": project.version
+        expand "version": project.version,
+                "minecraft_version": project.minecraft_version,
+                "architectury_version": libs.versions.architectury.get(),
+                "jamlib_version": libs.versions.jamlib.get()
     }
 
     inputs.property "version", project.version
+    inputs.property "minecraft_version", project.minecraft_version
+    inputs.property "architectury_version", libs.versions.architectury.get()
+    inputs.property "jamlib_version", libs.versions.jamlib.get()
 }
 
 shadowJar {
