--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
-    id "io.github.juuxel.loom-quiltflower" version "1.7.2" apply false
+    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
     id "me.shedaniel.unified-publishing" version "0.1.+" apply false
     id "com.github.breadmoirai.github-release" version "2.4.1"
     id "maven-publish"
@@ -25,7 +24,6 @@ if (System.getenv("GITHUB_TOKEN") != null) {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
-    apply plugin: "io.github.juuxel.loom-quiltflower"
 
     loom {
         silentMojangMappingsLicense()
@@ -39,7 +37,8 @@ subprojects {
                     'Implementation-Title'  : project.name,
                     'Implementation-Version': project.jar.archiveVersion,
                     'Built-On-Java'         : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
-                    'Built-On-Minecraft'    : minecraft_version
+                    'Built-On-Minecraft'    : minecraft_version,
+                    'JamLib-File-Name'        : "rightclickharvest-${project.base.archivesName.get()}-${rootProject.version}.jar"
             ])
         }
     }
@@ -84,6 +83,7 @@ allprojects {
     }
 
     tasks.publish {
+        dependsOn("clean")
         dependsOn(":githubRelease")
         dependsOn("common:publishAllPublicationsToMavenRepository")
         dependsOn("fabric:publishUnified")
