--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -98,10 +98,18 @@ publishing {
 
 processResources {
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": project.version,
+                "minecraft_version": project.minecraft_version,
+                "fabric_api_version": libs.versions.fabric.api.get(),
+                "architectury_version": libs.versions.architectury.get(),
+                "jamlib_version": libs.versions.jamlib.get()
     }
 
     inputs.property "version", project.version
+    inputs.property "minecraft_version", project.minecraft_version
+    inputs.property "fabric_api_version", libs.versions.fabric.api.get()
+    inputs.property "architectury_version", libs.versions.architectury.get()
+    inputs.property "jamlib_version", libs.versions.jamlib.get()
 }
 
 shadowJar {
