--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,34 +27,22 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Setup JDK 17
+      - name: Setup JDK 21
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: 21
 
       - name: Run Game Tests
         run: ./gradlew fabric-gametest:runGametest
 
       - name: Build
-        run: ./gradlew clean neoforge:build forge:build fabric:build quilt:build
+        run: ./gradlew clean neoforge:build fabric:build
 
       - name: Capture Fabric Build Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: Fabric Artifacts
           path: fabric/build/libs/
-
-      - name: Capture Quilt Build Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Quilt Artifacts
-          path: quilt/build/libs/
-
-      - name: Capture Forge Build Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Forge Artifacts
-          path: forge/build/libs/
 
       - name: Capture NeoForge Build Artifacts
         uses: actions/upload-artifact@v2
