--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.2.0+1.20.4
-minecraft_version=1.20.4
+version=4.2.0+1.20.6
+minecraft_version=1.20.6
 branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
-enabled_platforms=fabric,forge,neoforge,quilt
+enabled_platforms=fabric,neoforge
