--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[47,)"
+loaderVersion = "[1,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/JamCoreModding/right-click-harvest/issues"
 
@@ -10,34 +10,32 @@ displayName = "Right Click Harvest"
 displayURL = "https://github.com/JamCoreModding/right-click-harvest"
 logoFile = "icon.png"
 authors = "Jamalam"
-description = '''
-Right click crops to harvest them - with style.
-'''
+description = "Right click crops to harvest them - with style."
 
 [[dependencies.rightclickharvest]]
-modId = "forge"
-mandatory = true
-versionRange = "[49,)"
+modId = "neoforge"
+type = "required"
+versionRange = "[20.4,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.rightclickharvest]]
 modId = "minecraft"
-mandatory = true
+type = "required"
 versionRange = "[${minecraft_version},)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.rightclickharvest]]
 modId = "architectury"
-mandatory = true
+type = "required"
 versionRange = "[${architectury_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.rightclickharvest]]
 modId = "jamlib"
-mandatory = true
+type = "required"
 versionRange = "[${jamlib_version},)"
 ordering = "AFTER"
 side = "BOTH"
