--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.2.0+1.20.6
-minecraft_version=1.20.6
+version=4.2.0+1.21
+minecraft_version=1.21
 branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
 enabled_platforms=fabric,neoforge
+
+systemProp.javax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl
+systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
+systemProp.javax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
