fix(build): Architectury dep now uses implementation not api

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,7 +4,7 @@ architectury {
 
 dependencies {
     modImplementation libs.fabric.loader
-    modApi libs.architectury.common
+    modImplementation libs.architectury.common
     modImplementation libs.jamlib.common
 }
 
