--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.2.0+1.20.6
+version=4.3.0+1.20.6
 minecraft_version=1.20.6
-branch=main
+branch=1.20.6
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
